--- a/ПМЖ.md
+++ b/ПМЖ.md
@@ -74,7 +74,9 @@ Note: Versicherungsverlauf и Wartezeitauskunft (Rentenauskunft) - это раз
 
 ## Daueraufenthalt-EU (DA-EU)?
 ### Что такое Daueraufenthalt-EU (DA-EU)?
-Разрешение на постоянное проживание в ЕС (нем. Daueraufenthalt-EU, европейское ПМЖ) является более широким разрешением для проживания и работы, но уже на территории всего ЕС. Выдается после 5 лет отчислений в пенсионный фонд Германии, также является неограниченным, допускает отсутствие в Германии до 11 месяцев при доказанной необходимости (например, служебная командировка), или до 23 месяцев при наличии у одного из супругов Blaue Karte до получения Daueraufenthalt-EU (см. (10).3 [Gesetz über den Aufenthalt §51](https://www.gesetze-im-internet.de/aufenthg_2004/__51.html)). Подробнее про список требуемых документов [тут](https://service.berlin.de/dienstleistung/324281/pdf/)
+Разрешение на постоянное проживание в ФРГ со встроенным статусом долговременного резидента ЕС (нем. Daueraufenthalt-EU) является другим видом бессрочного ВНЖ ФРГ. По сравнению с NE, имеет два преимущества: во-первых, допускает более длительное отсутствие резидента на территории ФРГ без потери этого ВНЖ - для его потери нужно аж 5 лет не находиться на территории ЕС. Также он допускает отсутствие в Германии до 11 месяцев "стажа" на ПМЖ при доказанной необходимости (например, служебная командировка), или до 23 месяцев при наличии у одного из супругов Blaue Karte до получения Daueraufenthalt-EU (см. (10).3 [Gesetz über den Aufenthalt §51](https://www.gesetze-im-internet.de/aufenthg_2004/__51.html)). Вторым преимуществом является нечётко прописанная норма пенсионного обеспечения: заявитель на ДА-ЭУ должен доказать в АБХ свою обеспеченность на старости, например 60 месяцами взносов в государственное пенсионное страхование. Некоторые АБХ трактуют эту норму ограничительно - дескать, несите выписку из соцстраха, или гуляйте отсюда. Гораздо более лояльные АБХ рассмотрят и другие источники обеспечения, например, очень высок шанс у заявителя, владеющего собственной жилой недвижимостью (особенно в городах с высокого ставкой аренды - вообще гвооря, это может быть и вне ФРГ!). К недостаткам определенно относится невозможность воспользоваться некоторыми льготами на "стаж", например у блукарточников, а также относительная новизна этого статуса, и иной раз в различных инстанциях возникают вопросы вида "это что вообще такое".
+Вопреки распостраненному заблуждению, DA-EU не даёт права на проживание вили работу в другой стране ЕС "автоматом". В то же время, его можно держать параллельно с ВНЖ других стран, в том числе и ЕС/ЕЕА/Шенгена (но бессрочный ВНЖ в ЕС можно иметь только один). Считанные страны предлагают держателям DA-EU, выданных Германией, ВНЖ с целью поиска работы просто по факту приезда и прошения держателя ДА-ЭУ (Швеция), других льгот кроме отсутствия проверки рынка труда в других странах ЕС ДА-ЭУ не даёт.
+Подробнее про список требуемых документов [тут](https://service.berlin.de/dienstleistung/324281/pdf/)
 
 ## FAQ
 
@@ -102,7 +104,7 @@ Note: Versicherungsverlauf и Wartezeitauskunft (Rentenauskunft) - это раз
 другая ситуация (возможность сохранить NE при получении DA-EU), общие пункты и понятия применимы в т.ч. и для случая БК+NE. Особое внимание рекомендуется уделить пунктам 16, 18 и 19.
 
 #### Можно ли владеть одновременно NE и DA-EU?
-В теории - можно и нужно. Далее - см. предыдущий пункт, в общем-то вся информация оттуда также релевантна.
+В теории - можно и нужно. Далее - см. предыдущий пункт, в общем-то вся информация оттуда также релевантна. (Нельзя. Нельзя иметь более одного бессрочного ВНЖ в любой из стран ЕС либо бессрочные ВНЖ нескольких стран ЕС. Статус Long-Term EU Resident можно попытаться впихнуть в NE в виде приписки в поле для замечаний или в листке-приложении, но вообще говоря Германия не разделяет этот статус и бессрочный ВНЖ с этим статусом, и именно поэтому ответ на данный вопрос - НЕЛЬЗЯ.)
 
 #### Можно ли получать ALG-II (социал) с NE?
 Нет
