--- a/Мобильная связь.md
+++ b/Мобильная связь.md
@@ -66,8 +66,9 @@
 - online пополнение через карточки. Сервис [Prelado](https://www.prelado.de/) поддерживает больше 50 провайдеров, точно работает с CallYa. Время пополнения примерно 5 минут.
 - еще один online сервис пополнения [Aufladen](https://www.aufladen.de/en)
 - Кредитная/Дебетовая карточка (Visa/Mastercard ...)
-- PayPal
-- Настройка автоматического списывания суммы с банковского счета
+- PayPal Digital Gifts
+- Настройка автоматического списывания суммы с банковского счета (SEPA-Mandat, зависит от провайдера)
+- Недокументированная возможность пополнять переводом на любую сумму припейд-номера, обслуживаемые Telefonica
 
 ## Качество связи
 *Данные на основе отзывов пользователей из Slack (настоящего голосования не было, так что информация просто для ознакомления).*
